# LegacyWeaveLoader

./: README.md
ExampleMod/: ExampleMod.cs  ExampleMod.csproj
ExampleMod/assets/: README.md
ExampleMod/assets/examplemod/lang/: en-GB.lang
ExampleMod/assets/examplemod/models/block/: ruby_chair.json
ExampleMod/assets/examplemod/models/item/: ruby_wand.json
ExampleMod/assets/lang/: de-DE.lang  en-GB.lang
LegacyForge.API/: AssemblyInfo.cs  CreativeTab.cs  LegacyForge.API.csproj  Logger.cs  NativeInterop.cs  Registry.cs
LegacyForge.API/Assets/: AssetRegistry.cs
LegacyForge.API/Block/: BlockProperties.cs  BlockRegistry.cs
LegacyForge.API/Item/: ItemProperties.cs  ItemRegistry.cs
LegacyForge.Core/: LegacyForge.Core.csproj  LegacyForgeApiMod.cs  LegacyForgeCore.cs  ModDiscovery.cs
LegacyForge.Launcher/: FileDialog.cs  Injector.cs  LegacyForge.Launcher.csproj  Program.cs
LegacyForgeRuntime/: CMakeLists.txt
LegacyForgeRuntime/src/: CrashHandler.cpp  CrashHandler.h  CreativeInventory.cpp  CreativeInventory.h  DotNetHost.cpp  DotNetHost.h  GameHooks.cpp  GameHooks.h  GameObjectFactory.cpp  GameObjectFactory.h  HookManager.cpp  IdRegistry.cpp  IdRegistry.h  LogUtil.cpp  LogUtil.h  MainMenuOverlay.cpp  MainMenuOverlay.h  ModAtlas.cpp  ModAtlas.h  ModStrings.cpp  ModStrings.h  NativeExports.cpp  NativeExports.h  PdbParser.cpp  PdbParser.h  SymbolResolver.cpp  SymbolResolver.h  dllmain.cpp
WeaveLoader.API/: CreativePlacement.cs  ModContext.cs  NativeInterop.cs  Text.cs  WeaveLoader.API.csproj
WeaveLoader.API/Assets/: ModelBox.cs  ModelResolver.cs
WeaveLoader.API/Block/: BlockProperties.cs  BlockRegistry.cs
WeaveLoader.API/Item/: ItemProperties.cs  ItemRegistry.cs  ItemRendering.cs  ManagedItemRendererDispatcher.cs
WeaveLoader.API/mod_assets/: README.md
WeaveLoader.API/mod_assets/minecraft/models/item/: generated.json
WeaveLoader.Core/: ModDiscovery.cs  ModManager.cs
WeaveLoader.Launcher/: Injector.cs  Program.cs
WeaveLoaderRuntime/: CMakeLists.txt
WeaveLoaderRuntime/src/: CreativeInventory.cpp  CreativeInventory.h  DotNetHost.cpp  GameHooks.cpp  GameHooks.h  HookManager.cpp  IdRegistry.cpp  IdRegistry.h  ItemRenderRegistry.cpp  ItemRenderRegistry.h  LogUtil.cpp  LogUtil.h  ModAtlas.cpp  ModAtlas.h  ModelRegistry.cpp  ModelRegistry.h  NativeExports.cpp  NativeExports.h  PdbParser.cpp  PdbParser.h  SymbolResolver.cpp  SymbolResolver.h  WorldIdRemap.cpp  WorldIdRemap.h  dllmain.cpp
WeaveLoaderRuntime/src/Symbols/: SymbolGroups.cpp  SymbolGroups.h
docs/: MODDING.md
